--- a/skylog/package.json
+++ b/skylog/package.json
@@ -27,12 +27,16 @@
     ]
   },
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.2.1",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
+    "date-fns": "^2.14.0",
     "history": "^4.9.0",
+    "input-moment": "^0.4.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
