--- a/skylog/package.json
+++ b/skylog/package.json
@@ -41,6 +41,8 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-gauge-chart": "^0.2.5",
