--- a/skylog/package.json
+++ b/skylog/package.json
@@ -5,6 +5,10 @@
   "licence": "MIT",
   "version": "0.3.0",
   "private": false,
+  "engines": {
+    "node": "12.18.1",
+    "npm": "6.14.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
